--- a/pom.xml
+++ b/pom.xml
@@ -358,7 +358,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.4</version>
+        <version>0.7.4.201502262128</version>
       </plugin>
     </plugins>
   </build>
