--- a/feature-report/pom.xml
+++ b/feature-report/pom.xml
@@ -27,6 +27,11 @@
       <groupId>org.verapdf</groupId>
       <artifactId>verapdf-exceptions</artifactId>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
 </project>
