--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,17 @@
       <artifactId>equalsverifier</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>net.java.dev.stax-utils</groupId>
+        <artifactId>stax-utils</artifactId>
+        <version>20070216</version>
+        <exclusions>
+            <exclusion>
+                <groupId>com.bea.xml</groupId>
+                <artifactId>jsr173-ri</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
   </dependencies>
   <build>
     <resources>
