--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -115,11 +115,15 @@
     <system>OPF Jenkins</system>
     <url>http://jenkins.opf-labs.org</url>
   </ciManagement>
+
   <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
     <repository>
-      <id>OPF Artefactory</id>
-      <name>OPF Artefactory-releases</name>
-      <url>http://artifactory.opf-labs.org/artifactory/vera-dev-local</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
 
