--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.6.0</version>
+    <version>1.7.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>core</artifactId>
