--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.8.0</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -51,7 +51,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.7.0,1.8.0)</verapdf.model.version>
+    <verapdf.model.version>[1.8.0,1.9.0)</verapdf.model.version>
     <verapdf.xmp.version>[0.12.0,0.13.0)</verapdf.xmp.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
