--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -32,7 +32,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-parent</artifactId>
-  <version>1.4.1</version>
+  <version>1.12</version>
   <packaging>pom</packaging>
 
   <name>veraPDF Consortium parent </name>
@@ -153,25 +153,33 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.7</java.version>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-    <mvn.assembly.version>2.5.5</mvn.assembly.version>
+    <mvn.assembly.version>3.1.0</mvn.assembly.version>
     <mvn.clean.version>3.0.0</mvn.clean.version>
-    <mvn.compiler.version>3.3</mvn.compiler.version>
+    <mvn.compiler.version>3.7.0</mvn.compiler.version>
     <mvn.deploy.version>2.8.2</mvn.deploy.version>
     <mvn.exec.version>1.4.0</mvn.exec.version>
     <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
-    <mvn.javadoc.version>2.10</mvn.javadoc.version>
+    <mvn.javadoc.version>3.0.0</mvn.javadoc.version>
+    <mvn.project-info.version>2.9</mvn.project-info.version>
     <mvn.release.version>2.5.3</mvn.release.version>
-    <mvn.resources.version>2.7</mvn.resources.version>
-    <mvn.site.version>3.4</mvn.site.version>
-    <mvn.source.version>2.4</mvn.source.version>
-    <mvn.surefire.version>2.18.1</mvn.surefire.version>
-    <mvn.versions.version>2.2</mvn.versions.version>
+    <mvn.resources.version>3.0.2</mvn.resources.version>
+    <mvn.site.version>3.6</mvn.site.version>
+    <mvn.source.version>3.0.1</mvn.source.version>
+    <mvn.surefire.version>2.20.1</mvn.surefire.version>
+    <mvn.versions.version>2.5</mvn.versions.version>
+    <mvn.mycilla.license.version>3.0</mvn.mycilla.license.version>
     <verapdf.timestamp>${maven.build.timestamp}</verapdf.timestamp>
   </properties>
 
   <build>
     <pluginManagement>
       <plugins>
+
+        <plugin>
+          <groupId>com.mycila</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>${mvn.mycilla.license.version}</version>
+        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -275,6 +283,12 @@
         </plugin>
 
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>${mvn.project-info.version}</version>
+        </plugin>
+
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.7.5.201505241946</version>
@@ -318,7 +332,6 @@
           <plugin>
             <groupId>com.mycila</groupId>
             <artifactId>license-maven-plugin</artifactId>
-            <version>2.3</version>
             <configuration>
               <header>license/template/license.txt</header>
               <properties>
@@ -368,16 +381,6 @@
           </plugin>
         </plugins>
       </build>
-      <dependencies>
-
-        <dependency>
-          <groupId>org.codehaus.sonar-plugins.java</groupId>
-          <artifactId>sonar-jacoco-listeners</artifactId>
-          <version>1.2</version>
-          <scope>test</scope>
-        </dependency>
-
-      </dependencies>
     </profile>
 
     <profile>
@@ -447,18 +450,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-
-    <profile>
-      <id>sonar</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <sonar.host.url>
-          http://sonar.opf-labs.org
-        </sonar.host.url>
-      </properties>
     </profile>
 
   </profiles>
