--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -5,14 +5,23 @@
 
   <parent>
     <groupId>org.verapdf</groupId>
-    <artifactId>verapdf-xmp</artifactId>
-    <version>0.12.0</version>
+    <artifactId>verapdf-library</artifactId>
+    <version>1.11.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>verapdf-xmp-core-coverage</artifactId>
 
   <name>veraPDF PDF/A XMP Library Core Coverage</name>
   <description>Coverage and tests for core components for the veraPDF PDF/A XMP Parsing and Validation library.</description>
+
+  <url>https://github.com/veraPDF/veraPDF-xmp/</url>
+  <licenses>
+    <license>
+      <name>BSD 3-Clause License</name>
+      <url>http://opensource.org/licenses/BSD-3-Clause</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <dependencies>
     <dependency>
