--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -5,13 +5,21 @@
 
   <parent>
     <groupId>org.verapdf</groupId>
-    <artifactId>verapdf-xmp</artifactId>
-    <version>0.12.0</version>
+    <artifactId>verapdf-library</artifactId>
+    <version>1.11.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>verapdf-xmp-core</artifactId>
 
   <name>veraPDF PDF/A XMP Library Core</name>
   <description>Core components for the veraPDF PDF/A XMP Parsing and Validation library.</description>
+
+  <licenses>
+    <license>
+      <name>BSD 3-Clause License</name>
+      <url>http://opensource.org/licenses/BSD-3-Clause</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
 </project>
