--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,31 +40,52 @@
       <groupId>org.verapdf</groupId>
       <artifactId>pdf-model</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.verapdf</groupId>
       <artifactId>verapdf-xmp-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.mozilla</groupId>
       <artifactId>rhino</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.xmlunit</groupId>
       <artifactId>xmlunit-core</artifactId>
       <version>2.2.1</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
         <groupId>net.java.dev.stax-utils</groupId>
         <artifactId>stax-utils</artifactId>
@@ -76,7 +97,9 @@
             </exclusion>
         </exclusions>
     </dependency>
+
   </dependencies>
+
   <build>
     <resources>
       <resource>
