--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.13.0-SNAPSHOT</version>
+    <version>1.14.0-RC</version>
   </parent>
 
   <artifactId>core</artifactId>
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>org.xmlunit</groupId>
       <artifactId>xmlunit-core</artifactId>
-      <version>2.2.1</version>
+      <version>2.6.2</version>
       <scope>test</scope>
     </dependency>
 
