--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
   <parent>
     <artifactId>verapdf-parent</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.12.2</version>
+    <version>1.14.0</version>
     <relativePath>parent/pom.xml</relativePath>
   </parent>
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.13.0-SNAPSHOT</version>
+  <version>1.14.0-RC</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -52,7 +52,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.13.0,1.14.0)</verapdf.model.version>
+    <verapdf.model.version>[1.14.0-RC,1.15.0-RC)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
@@ -88,7 +88,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13-beta-3</version>
         <scope>test</scope>
       </dependency>
 
@@ -103,7 +103,7 @@
       <dependency>
         <groupId>org.mozilla</groupId>
         <artifactId>rhino</artifactId>
-        <version>1.7.7.2</version>
+        <version>1.7.11</version>
       </dependency>
 
       <dependency>
@@ -122,13 +122,13 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.3.1</version>
+        <version>2.4.0-b180830.0359</version>
       </dependency>
 
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.3.1</version>
+        <version>2.3.2</version>
       </dependency>
 
       <dependency>
