--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library</artifactId>
-    <version>1.13.0-SNAPSHOT</version>
+    <version>1.14.0-RC</version>
   </parent>
 
   <artifactId>verapdf-xmp-core</artifactId>
