--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.15.0,1.16.0)</verapdf.model.version>
+    <verapdf.model.version>1.15.0-SNAPSHOT</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
