--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>1.15.0-SNAPSHOT</verapdf.model.version>
+    <verapdf.model.version>[1.15.0,1.16.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
@@ -72,9 +72,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
-        </configuration>
       </plugin>
 
       <plugin>
