--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.17.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -52,7 +52,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.17.0,1.18.0-RC)</verapdf.model.version>
+    <verapdf.model.version>[2.0.0,2.1.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
