--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -32,7 +32,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-parent</artifactId>
-  <version>1.16.1</version>
+  <version>1.17.1</version>
   <packaging>pom</packaging>
 
   <name>veraPDF Consortium parent </name>
@@ -459,6 +459,12 @@
                 <goals>
                   <goal>sign</goal>
                 </goals>
+                <configuration>
+                    <gpgArguments>
+                        <arg>--pinentry-mode</arg>
+                        <arg>loopback</arg>
+                    </gpgArguments>
+                </configuration>
               </execution>
             </executions>
           </plugin>
