--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.18.0</version>
   </parent>
 
   <artifactId>verapdf-xmp-core</artifactId>
