--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.20.0-RC1</version>
+  <version>1.20.0</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -53,7 +53,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.20.0-RC,1.21.0)</verapdf.model.version>
+    <verapdf.model.version>[1.20.0,1.21.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
