--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -20,3 +20,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+      - uses: codecov/codecov-action@v2
+        with:
+          files: ./core/target/site/jacoco/jacoco.xml
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
