--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        java-version: [11, 16, 17]
+        java-version: [8, 11, 16]
 
     steps:
       - uses: actions/checkout@v2
@@ -25,3 +25,5 @@ jobs:
           files: ./core/target/site/jacoco/jacoco.xml
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action
