--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        java-version: [8, 11, 16]
+        java-version: [11, 16]
 
     steps:
       - uses: actions/checkout@v2
