--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -25,3 +25,5 @@ jobs:
           files: ./core/target/site/jacoco/jacoco.xml
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@4.0.0
