--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
   <parent>
     <artifactId>verapdf-parent</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.21.1</version>
+    <version>1.22.1</version>
     <relativePath>parent/pom.xml</relativePath>
   </parent>
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.21.0-SNAPSHOT</version>
+  <version>1.22.0-RC1</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
