--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.21.0,1.22.0-RC)</verapdf.model.version>
+    <verapdf.model.version>[1.22.0-RC,1.23.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
