--- a/core/src/main/resources/org/verapdf/metadata/fixer/processed-objects.properties
+++ b/core/src/main/resources/org/verapdf/metadata/fixer/processed-objects.properties
@@ -1,2 +1,4 @@
 processed.objects.path.pdfa_1 = org/verapdf/metadata/fixer/processedObjectsPDFA_1.xml
 processed.objects.path.pdfa_2_3 = org/verapdf/metadata/fixer/processedObjectsPDFA_2_3.xml
+processed.objects.path.pdfa_4 = org/verapdf/metadata/fixer/processedObjectsPDFA_4.xml
+processed.objects.path.pdfua_1 = org/verapdf/metadata/fixer/processedObjectsPDFUA_1.xml
